--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     overflow-x: hidden;
     font-family: "Poppins", sans-serif;
     font-size: 15px;
+    background-color: #fafafa;
 }
 
 p{
