--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     max-width: 100%;
     overflow-x: hidden;
     font-family: "Poppins", sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-size: 15px;
     background-color: #fafafa;
 }
